sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: type int
	var i : int=0;
                ^AlgBubbleSort1:5: error: not found: type int
	var echEffectue : int=1;
                          ^